--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: python
 python:
 - 3.9.0
 before_install:
-pip3 install -r requirements.txt
+- pip3 install -r requirements.txt
 script:
 - pytest com/Ribeiro/test/
