--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 python:
-- 3.9
+- 3.8
 before_install:
 - pip3 install -r requirements.txt
 script:
-- pytest com/Ribeiro/test/
+- pytest com/Ribeiro/test
